--- a/config/config.example.yaml
+++ b/config/config.example.yaml
@@ -1,17 +1,13 @@
-- descriptor: "pip-services-container:container-info:default:default:1.0"
-  name: "pip-services-eventlog"
-  description: "EventLog microservice"
-
+---
 - descriptor: "pip-services-commons:logger:console:default:1.0"
   level: "trace"
 
-- descriptor: "pip-services-eventlog:persistence:file:default:1.0"
-  path: "./data/eventlog.json"
+- descriptor: "pip-services-counters:persistence:memory:default:1.0"
 
-- descriptor: "pip-services-eventlog:controller:default:default:1.0"
+- descriptor: "pip-services-counters:controller:default:default:1.0"
 
-- descriptor: "pip-services-eventlog:service:http:default:1.0"
+- descriptor: "pip-services-counters:service:http:default:1.0"
   connection:
     protocol: "http"
     host: "0.0.0.0"
-    port: 3000
+    port: 8080
