--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "relaunch": "tsc && node ./bin/run.js",
         "test": "mocha -t 5000 -R spec -u tdd --recursive ./obj/test",
         "retest": "tsc && mocha -t 5000 -R spec -u tdd --recursive ./obj/test",
-        "benchmark": "matcha -R clean -I tdd ./obj/benchmark/run.js",
+        "benchmark": "node ./obj/benchmark/run.js",
         "rebenchmark": "tsc && matcha -R clean -I tdd ./obj/benchmark/run.js"
     },
     "dependencies": {
@@ -57,6 +57,7 @@
         "restify": "^4.3.0",
         "chai": "*",
         "matcha": "*",
-        "mocha": "*"
+        "mocha": "*",
+        "pip-benchmark-node": "git+ssh://git@github.com:pip-benchmark/pip-benchmark-node.git"
     }
 }
