--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
         "restify": "^4.3.0",
         "chai": "*",
         "mocha": "*",
-        "pip-benchmark-node": "git+ssh://git@github.com:pip-benchmark/pip-benchmark-node.git"
+        "pip-benchmark-node": "^2.0.1"
     }
 }
